force-app/main/default/objects/Porcelanosa_B2B_Portal__mdt/Porcelanosa_B2B_Portal__mdt.object-meta.xml
<CustomObject>
    <label>Porcelanosa B2B Portal</label>
    <pluralLabel>Porcelanosa B2B Portals</pluralLabel>
</CustomObject>