force-app/main/default/objects/Porcelanosa_B2B_Portal__mdt/fields/Catalog_Id__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Id__c</fullName>
    <label>Catalog Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>