force-app/main/default/objects/Porcelanosa_B2B_Portal__mdt/fields/CMS_Id__c.field-meta.xml
<CustomField>
    <fullName>CMS_Id__c</fullName>
    <label>CMS_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>