force-app/main/default/objects/Porcelanosa_B2B_Portal__mdt/fields/WebStoreId__c.field-meta.xml
<CustomField>
    <fullName>WebStoreId__c</fullName>
    <label>WebStoreId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>